# pipe-cleaner

./: Cargo.toml
engine/: Cargo.toml
engine/src/: entity.rs  main.rs  wasm.rs  world.rs
engine/src/visual/: geo.rs  mod.rs  renderer.rs  shader.wgsl
engine/src/wasm_entity/: allocator.rs  mod.rs
game/: Cargo.toml
game-lib/: Cargo.toml
game-lib/src/: lib.rs  sys.rs
game/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: entity.rs  main.rs  old_main.rs  shader.wgsl  visual.rs  world.rs
src/visual/: geo.rs  mod.rs  renderer.rs  shader.wgsl
