[package]
name = "pipe-cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "^0.17.0"
pollster = "^0.2.5"

[dependencies.sdl2]
git = 'https://github.com/Rust-SDL2/rust-sdl2.git'
features = ["raw-window-handle"]
