cargo-features = ["profile-rustflags"]

[workspace]
members = [ 
    "engine",
    "game",
    "game-lib",
    "shared",
]
resolver = "2"

[workspace.dependencies.bytemuck]
version = "^1.23.0"
features = ["must_cast"]

[workspace.dependencies.pipe-cleaner-shared]
version = "^0.1.0"
path = "./shared"

[workspace.dependencies.pipe-cleaner-game-lib]
version = "^0.1.0"
path = "./game-lib"

[profile.release]
rustflags = ["-Zwasm-c-abi=spec"]

[profile.dev]
rustflags = ["-Zwasm-c-abi=spec"]
