[package]
name = "pipe-cleaner-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pipe-cleaner"
path = "src/main.rs"
test = false
bench = false

[dependencies]
wgpu = "^25.0.0"
pollster = "^0.4.0"
wasmtime = "^35.0.0"

[dependencies.sdl3]
version = "^0.14.0"
features = ["raw-window-handle"]

[dependencies.bytemuck]
version = "^1.23.0"
features = ["must_cast"]
