cargo-features = ["per-package-target"]

[package]
name = "pipe-cleaner-game-lib"
version = "0.1.0"
edition = "2024"
forced-target = "wasm32-unknown-unknown"

[dependencies]
talc = "^4.4.3"
bytemuck = { workspace = true }

[dependencies.spin]
version =  "^0.9.8"
default-features = false
features = ["lock_api", "spin_mutex"]

[dependencies.pipe-cleaner-shared]
features = ["guest"]
workspace = true
