cargo-features = ["per-package-target", "profile-rustflags"]

[package]
name = "pipe-cleaner-base-game"
version = "0.1.0"
edition = "2024"
forced-target = "wasm32-unknown-unknown"

[lib]
name = "base_game"
path = "src/lib.rs"
crate-type = ["cdylib"]
bench = false

[profile.release]
rustflags = ["-Zwasm-c-abi=spec"]

[profile.dev]
rustflags = ["-Zwasm-c-abi=spec"]

[dependencies]
